<resources>
    <string name="app_name">WardrobeOrganizer</string>
    <string name="left_title">WARDROBE</string>
    <string name="right_title">ORGANIZER</string>
    <string name="btn_add">ADD</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_take_out">TAKE OUT</string>
    <string name="btn_put_away">PUT AWAY</string>
    <string name="develop_desc">DEVELOPED BY</string>
    <string name="author">HEESU JU</string>

    <string name="category">종류</string>
    <string name="material">소재</string>
    <string name="brand">브랜드</string>
    <string name="state">상태</string>
    <string name="worn">입은 날짜</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>

    <string-array name="color_array">
        <item>화이트</item>
        <item>레드</item>
        <item>블루</item>
        <item>그린</item>
        <item>옐로우</item>
        <item>오렌지</item>
        <item>브라운</item>
        <item>핑크</item>
        <item>퍼플</item>
        <item>네이비</item>
        <item>그레이</item>
        <item>블랙</item>
    </string-array>

    <string-array name="category_array">
        <item>상의</item>
        <item>하의</item>
        <item>아우터</item>
        <item>원피스</item>
    </string-array>

    <string-array name="material_array">
        <item>리넨</item>
        <item>나일론</item>
        <item>플리에스터</item>
        <item>실크</item>
        <item>데님</item>
        <item>레더</item>
    </string-array>

    <string-array name="winter_material_array">
        <item>코튼</item>
        <item>울</item>
        <item>캐시미어</item>
        <item>니트</item>
        <item>후리스</item>
        <item>퍼</item>
    </string-array>

    <string-array name="state_array">
        <item>옷장</item>
        <item>정리</item>
    </string-array>

    <string-array name="date_array">
        <item>오늘</item>
        <item>어제</item>
        <item>1주</item>
        <item>1개월</item>
        <item>3개월</item>
        <item>6개월</item>
        <item>1년</item>
        <item>1년 이상</item>
    </string-array>
</resources>