<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/ivory"
        android:padding="20dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <ImageButton
                android:id="@+id/button_camera"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Open Camera"
                android:src="@drawable/camera_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/pink"
                android:padding="22dp"/>
            <ImageButton
                android:id="@+id/button_album"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Open Album"
                android:src="@drawable/album_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/brown"
                android:padding="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ivory"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/brand"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/edit_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="색상"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
            <Spinner
                android:id="@+id/spinner_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material" />
            <Spinner
                android:id="@+id/spinner_material"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state" />
            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_worn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마지막 입은 날짜" />
            <TextView
                android:id="@+id/text_worn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom">
            <Button
                android:id="@+id/button_wear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="입기" />
            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
            <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="갱신" />
            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="폐기" />
        </LinearLayout>
    </LinearLayout>




</LinearLayout>